{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 773,
  "lineage": "1bc8fbea-bfa8-c221-30f0-db576693004b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:918473837614:vpc/vpc-dba178b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-a3a024c8",
            "default_route_table_id": "rtb-d191f7ba",
            "default_security_group_id": "sg-dc55eca7",
            "dhcp_options_id": "dopt-5522913e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-dba178b0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-d191f7ba",
            "owner_id": "918473837614"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-reg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a040c35ca945058a",
            "arn": "arn:aws:ec2:us-east-2:918473837614:instance/i-0a43c16702d1e58f0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a43c16702d1e58f0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "FOTD-Key2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ae78e226b202264e",
            "private_dns": "ip-172-31-45-35.us-east-2.compute.internal",
            "private_ip": "172.31.45.35",
            "public_dns": "ec2-18-218-124-102.us-east-2.compute.amazonaws.com",
            "public_ip": "18.218.124.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0350447d3ee52af15",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20200611154422254500000003",
              "terraform-20200611154422278500000006"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-74d5b238",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0063e3b5a31091ba7",
              "sg-03171cb8ad447e549"
            ]
          },
          "dependencies": [
            "aws_key_pair.key",
            "aws_security_group.in_22tcp",
            "aws_security_group.out_all",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web-reg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:918473837614:loadbalancer/app/tf-lb-2020061115443125430000000b/a2603ee9dc966af3",
            "arn_suffix": "app/tf-lb-2020061115443125430000000b/a2603ee9dc966af3",
            "dns_name": "tf-lb-2020061115443125430000000b-1319162017.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:918473837614:loadbalancer/app/tf-lb-2020061115443125430000000b/a2603ee9dc966af3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-2020061115443125430000000b",
            "security_groups": [
              "sg-03171cb8ad447e549",
              "sg-0c874cd1dab97bb4d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-4fe92824"
              },
              {
                "subnet_id": "subnet-74d5b238"
              },
              {
                "subnet_id": "subnet-bbe1dec1"
              }
            ],
            "subnets": [
              "subnet-4fe92824",
              "subnet-74d5b238",
              "subnet-bbe1dec1"
            ],
            "vpc_id": "vpc-dba178b0",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.in_80tcp",
            "aws_security_group.out_all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-reg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:918473837614:listener/app/tf-lb-2020061115443125430000000b/a2603ee9dc966af3/7a1f6fd1649a1ddc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:918473837614:targetgroup/tf-2020061115443036980000000a/ddae7fb987f18e36",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:918473837614:listener/app/tf-lb-2020061115443125430000000b/a2603ee9dc966af3/7a1f6fd1649a1ddc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:918473837614:loadbalancer/app/tf-lb-2020061115443125430000000b/a2603ee9dc966af3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_lb.web-reg",
            "aws_lb_target_group.web-reg",
            "aws_security_group.in_80tcp",
            "aws_security_group.out_all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web-reg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:918473837614:targetgroup/tf-2020061115443036980000000a/ddae7fb987f18e36",
            "arn_suffix": "targetgroup/tf-2020061115443036980000000a/ddae7fb987f18e36",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/get",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:918473837614:targetgroup/tf-2020061115443036980000000a/ddae7fb987f18e36",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-2020061115443036980000000a",
            "port": 5000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-dba178b0"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "in_22tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:918473837614:security-group/sg-0063e3b5a31091ba7",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0063e3b5a31091ba7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20200611154422278500000006",
            "name_prefix": null,
            "owner_id": "918473837614",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-dba178b0"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "in_5000tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:918473837614:security-group/sg-09df74750eb05a956",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09df74750eb05a956",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "terraform-20200611154422277900000005",
            "name_prefix": null,
            "owner_id": "918473837614",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-dba178b0"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "in_5432tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:918473837614:security-group/sg-0dfecb82b6f2832e4",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0dfecb82b6f2832e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20200611154422248900000001",
            "name_prefix": null,
            "owner_id": "918473837614",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-dba178b0"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "in_80tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:918473837614:security-group/sg-0c874cd1dab97bb4d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c874cd1dab97bb4d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20200611154422248900000002",
            "name_prefix": null,
            "owner_id": "918473837614",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-dba178b0"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "out_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:918473837614:security-group/sg-03171cb8ad447e549",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03171cb8ad447e549",
            "ingress": [],
            "name": "terraform-20200611154422254500000003",
            "name_prefix": null,
            "owner_id": "918473837614",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-dba178b0"
          }
        }
      ]
    }
  ]
}